--- a/au.org.libraryforall.updater.app/src/main/res/menu/inventory.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/menu/inventory.xml
@@ -3,15 +3,29 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
+    android:id="@+id/inventoryRepositoryReload"
+    android:icon="@drawable/reload"
+    android:title="@string/inventory_menu_repository_reload"
+    android:visible="true"
+    app:showAsAction="ifRoom" />
+
+  <item
     android:id="@+id/inventoryRepositoryAdd"
     android:icon="@drawable/add"
     android:title="@string/inventory_menu_repository_add"
-    android:visible="true" />
+    android:visible="true"
+    app:showAsAction="ifRoom" />
 
   <item
     android:id="@+id/inventoryRepositoryDelete"
     android:icon="@drawable/delete"
     android:title="@string/inventory_menu_repository_delete"
+    android:visible="true"
+    app:showAsAction="ifRoom" />
+
+  <item
+    android:id="@+id/inventoryVersion"
+    android:title="@string/inventory_menu_version"
     android:visible="true" />
 
 </menu>
