--- a/au.org.libraryforall.updater.app/src/main/res/layout/failure_item.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/layout/failure_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,7 +7,7 @@
   android:layout_height="wrap_content">
 
   <ImageView
-    android:id="@+id/installFailureIcon"
+    android:id="@+id/failureItemIcon"
     android:layout_width="32dp"
     android:layout_height="32dp"
     android:layout_marginTop="16dp"
@@ -16,7 +17,7 @@
     app:srcCompat="@drawable/ok_small" />
 
   <TextView
-    android:id="@+id/installFailureStepNumber"
+    android:id="@+id/failureItemStepNumber"
     android:layout_width="24dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -24,11 +25,11 @@
     android:text="99."
     android:textSize="12sp"
     android:fontFamily="monospace"
-    app:layout_constraintStart_toEndOf="@id/installFailureIcon"
+    app:layout_constraintStart_toEndOf="@id/failureItemIcon"
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
-    android:id="@+id/installFailureDescription"
+    android:id="@+id/failureItemDescription"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -36,11 +37,11 @@
     android:text="Placeholder"
     android:textSize="12sp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@id/installFailureStepNumber"
-    app:layout_constraintTop_toTopOf="@id/installFailureStepNumber" />
+    app:layout_constraintStart_toEndOf="@id/failureItemStepNumber"
+    app:layout_constraintTop_toTopOf="@id/failureItemStepNumber" />
 
   <TextView
-    android:id="@+id/installFailureResolution"
+    android:id="@+id/failureItemResolution"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -50,8 +51,8 @@
     android:text="Placeholder"
     android:textSize="12sp"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@id/installFailureStepNumber"
-    app:layout_constraintTop_toBottomOf="@id/installFailureDescription" />
+    app:layout_constraintStart_toEndOf="@id/failureItemStepNumber"
+    app:layout_constraintTop_toBottomOf="@id/failureItemDescription" />
 
   <View
     android:id="@+id/divider5"
@@ -59,6 +60,6 @@
     android:layout_height="1dp"
     android:layout_marginTop="16dp"
     android:background="?android:attr/listDivider"
-    app:layout_constraintTop_toBottomOf="@id/installFailureResolution"/>
+    app:layout_constraintTop_toBottomOf="@id/failureItemResolution"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
