--- a/au.org.libraryforall.updater.app/src/main/res/layout/inventory.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/layout/inventory.xml
@@ -8,14 +8,36 @@
 
   <TextView
     android:id="@+id/inventoryTitle"
-    android:layout_width="wrap_content"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
+    android:layout_marginEnd="8dp"
     android:text="Placeholder"
     android:textSize="18sp"
     android:textStyle="bold"
+    app:layout_constraintEnd_toStartOf="@+id/inventoryProgress"
     app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <ProgressBar
+    android:id="@+id/inventoryProgress"
+    style="?android:attr/progressBarStyle"
+    android:layout_margin="16dp"
+    android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:visibility="invisible"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <ImageView
+    android:id="@+id/inventoryProgressError"
+    app:srcCompat="@drawable/error_small"
+    android:layout_margin="16dp"
+    android:layout_width="24dp"
+    android:layout_height="24dp"
+    android:visibility="invisible"
+    app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
   <View
