Add repository removal

--- a/au.org.libraryforall.updater.app/src/main/res/menu/repository.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/menu/repository.xml
@@ -3,10 +3,16 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-    android:id="@+id/inventoryRepositoryReload"
+    android:id="@+id/menuItemRepositoryReload"
     android:icon="@drawable/reload"
     android:title="@string/inventory_menu_repository_reload"
     android:visible="true"
     app:showAsAction="ifRoom" />
+
+  <item
+    android:id="@+id/menuItemRepositoryDelete"
+    android:icon="@drawable/delete"
+    android:title="@string/inventory_menu_repository_delete"
+    android:visible="true" />
 
 </menu>
