--- a/au.org.libraryforall.updater.app/src/main/res/layout/repository.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/layout/repository.xml
@@ -3,7 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_height="128dp"
+  android:layout_height="80dp"
   android:layout_width="match_parent">
 
   <ImageView
@@ -47,5 +47,12 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/repositoryIcon"
     app:layout_constraintTop_toBottomOf="@id/repositoryName" />
+
+  <View
+    android:id="@+id/divider2"
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="?android:attr/listDivider"
+    app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
