--- a/au.org.libraryforall.updater.app/src/main/res/layout/repository_add.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/layout/repository_add.xml
@@ -3,7 +3,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_height="match_parent"
   android:layout_width="match_parent">
 
@@ -28,7 +27,7 @@
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="16dp"
-    android:inputType="text"
+    android:inputType="textUri"
     android:text="https://"
     android:textSize="12sp"
     android:fontFamily="monospace"
