--- a/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
@@ -9,4 +9,8 @@
     source="https://hotspot.lfa.one:8080/apk/hotspot.xml"
     title="LFA Hotspot Mirror"
     uuid="f2e20610-63c1-46ce-95aa-606a7c9e2391" />
+  <bundled-repository
+    source="https://builds.lfa.one/apk/outdated/releases.xml"
+    title="LFA Releases (Outdated)"
+    uuid="e21216c2-33f9-4cb5-933f-faf1b18a09a6" />
 </bundled-repositories>
