--- a/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
@@ -6,7 +6,7 @@
     title="LFA Releases"
     uuid="378142a2-23ff-44c9-964f-b621fe45ed0c" />
   <bundled-repository
-    source="http://hotspot.lfa.one:8080/apk/hotspot.xml"
+    source="http://hotspot.lfa.one:8080/apk/releases.xml"
     title="LFA Hotspot Mirror"
     uuid="f2e20610-63c1-46ce-95aa-606a7c9e2391" />
   <bundled-repository
