Add the ability to delete cached data
This adds an option in the main repositories menu to delete cached
data.

Affects: https://github.com/AULFA/updater/issues/8

--- a/au.org.libraryforall.updater.app/src/main/res/menu/repositories.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/menu/repositories.xml
@@ -14,4 +14,9 @@
     android:title="@string/inventory_menu_version"
     android:visible="true" />
 
+  <item
+    android:id="@+id/menuItemDeleteCachedData"
+    android:title="@string/inventory_menu_delete_cached_data"
+    android:visible="true" />
+
 </menu>
