--- a/au.org.libraryforall.updater.app/src/main/res/layout/inventory_package_installing.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/layout/inventory_package_installing.xml
@@ -3,6 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/installing"
   android:layout_width="match_parent"
   android:layout_height="@dimen/inventory_item_height">
@@ -45,33 +46,46 @@
     app:layout_constraintEnd_toEndOf="parent" />
 
   <ProgressBar
-    android:id="@+id/installingProgress"
+    android:id="@+id/installingProgressMajor"
     style="?android:attr/progressBarStyleHorizontal"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="16dp"
-    android:layout_marginBottom="16dp"
     android:indeterminate="true"
-    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toStartOf="@id/installingPackageButton"
-    app:layout_constraintStart_toStartOf="parent" />
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/installingIcon" />
+
+  <ProgressBar
+    android:id="@+id/installingProgressMinor"
+    style="?android:attr/progressBarStyleHorizontal"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:indeterminate="true"
+    app:layout_constraintEnd_toStartOf="@id/installingPackageButton"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/installingProgressMajor" />
 
   <TextView
     android:id="@+id/installingProgressState"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
     android:ellipsize="end"
     android:fontFamily="monospace"
     android:maxLines="1"
     android:text="A very long placeholder string for progress state"
     android:textSize="10sp"
-    app:layout_constraintBottom_toTopOf="@+id/installingProgress"
-    app:layout_constraintEnd_toStartOf="@+id/installingPackageButton"
-    app:layout_constraintStart_toStartOf="parent" />
+    app:layout_constraintBottom_toTopOf="@+id/installingPackageButton"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/installingIcon"
+    app:layout_constraintTop_toBottomOf="@+id/installingPackageName" />
 
   <View
     android:id="@+id/divider2"
