Refactor repository item handling
This does the necessary refactoring to distinguish between APK and
OPDS packages in the app. Currently, downloading OPDS packages fails
instantly.

Affects: https://github.com/AULFA/updater/issues/12

--- a/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/xml/bundled_repositories.xml
@@ -2,6 +2,10 @@
 
 <bundled-repositories>
   <bundled-repository
+    source="https://builds.lfa.one/apk2/releases.xml"
+    title="LFA Releases (v2)"
+    uuid="c84dc6b2-05d7-427e-b720-f5135d77d54e" />
+  <bundled-repository
     source="https://builds.lfa.one/apk/releases.xml"
     title="LFA Releases"
     uuid="378142a2-23ff-44c9-964f-b621fe45ed0c" />
