--- a/au.org.libraryforall.updater.app/src/main/res/values/stringsDownloading.xml
+++ b/au.org.libraryforall.updater.app/src/main/res/values/stringsDownloading.xml
@@ -10,7 +10,7 @@
   <string name="downloadingHTTPProgressMinorDefinite">Downloading (%1$.2fM / %2$.2fM: %3$.2fM/s)</string>
   <string name="downloadingHTTPProgressMinorIndefinite">Downloading (%1$.2fM: %2$.2fM/s)</string>
   <string name="downloadingHTTPRequest">Opening a connection to %1$s (attempt %2$d of %3$d)</string>
-  <string name="downloadingHTTPRetryingInSeconds">Retrying request in %1$d seconds…</string>
+  <string name="downloadingHTTPRetryingInSeconds">Retrying request (attempt %1$d of %2$d) in %3$d seconds…</string>
   <string name="downloadingHTTPSucceeded">Downloading a file succeeded.</string>
   <string name="downloadingHTTPWaitingBeforeRetrying">Pausing before retrying HTTP request…</string>
   <string name="downloadingHTTPWritingFile">Downloading and saving data…</string>
