Implement OPDS downloads
This implements the logic required to download OPDS
catalogs. Currently, neither the UI or model have been updated to
know if a given OPDS catalog is currently "installed". However, the
current logic to download a catalog can be repeated indefinitely,
acting as an effective "update" procedure at all times. Additionally,
downloaded catalogs are downloaded to internal storage and are not
yet exposed to external applications.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/src/main/res/values/stringsDownloading.xml
+++ b/one.lfa.updater.app/src/main/res/values/stringsDownloading.xml
@@ -11,8 +11,12 @@
   <string name="downloadingHTTPProgressMinorIndefinite">Downloading (%1$.2fM: %2$.2fM/s)</string>
   <string name="downloadingHTTPRequest">Opening a connection to %1$s (attempt %2$d of %3$d)</string>
   <string name="downloadingHTTPRetryingInSeconds">Retrying request (attempt %1$d of %2$d) in %3$d seconds…</string>
+  <string name="downloadingHTTPSkipping">Skipping download due to the presence of local content.</string>
   <string name="downloadingHTTPSucceeded">Downloading a file succeeded.</string>
   <string name="downloadingHTTPWaitingBeforeRetrying">Pausing before retrying HTTP request…</string>
   <string name="downloadingHTTPWritingFile">Downloading and saving data…</string>
-  <string name="downloadingHTTPSkipping">Skipping download due to the presence of local content.</string>
+  <string name="downloadingVerifyProgressMajor">Verifying (%1$d of %2$d) (%3$.2fM / %4$.2fM: %5$.2fM/s)</string>
+  <string name="downloadingVerifyProgressMajorIndefiniteMinor">Verifying (%1$d of %2$d) (%3$.2fM: %4$.2fM/s)</string>
+  <string name="downloadingVerifyProgressMinorDefinite">Verifying (%1$.2fM / %2$.2fM: %3$.2fM/s)</string>
+  <string name="downloadingVerifyProgressMinorIndefinite">Verifying (%1$.2fM: %2$.2fM/s)</string>
 </resources>
