Implement an OPDS catalog database
This implements a database abstraction that maintains a directory
of OPDS catalogs, and updates the inventory tasks to speak to the
database as a service rather than adjusting files manually.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/src/main/res/values/stringsOPDS.xml
+++ b/one.lfa.updater.app/src/main/res/values/stringsOPDS.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <resources>
+  <string name="opdsDatabaseErrorIdMismatch">OPDS catalog ID mismatch; expected \"%1$s\" but received \"%2$s\".</string>
   <string name="opdsDirectoryCreating">Creating a directory…</string>
   <string name="opdsDirectoryCreatingFailed">Creating a directory failed.</string>
   <string name="opdsLocalFileDeleting">Deleting a local file…</string>
