--- a/one.lfa.updater.app/src/main/res/layout/inventory_package_installed.xml
+++ b/one.lfa.updater.app/src/main/res/layout/inventory_package_installed.xml
@@ -38,12 +38,14 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:ellipsize="end"
     android:fontFamily="monospace"
     android:maxLines="1"
     android:text="Installed: 1.0.0 (1000)"
     android:textSize="12sp"
     app:layout_constraintBottom_toTopOf="@+id/installedPackageAvailable"
+    app:layout_constraintEnd_toStartOf="@+id/installedPackageButton"
     app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
@@ -51,6 +53,7 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     android:ellipsize="end"
     android:fontFamily="monospace"
@@ -58,6 +61,7 @@
     android:text="Available: 1.0.0 (1000)"
     android:textSize="12sp"
     app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/installedPackageButton"
     app:layout_constraintStart_toStartOf="parent" />
 
   <Button
