Update the UI to handle new cases
This rearranges the UI and button styles to allow for a more compact
display and to accomodate having new uninstall/verify buttons that
were not previously present.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/src/main/res/layout/inventory_package_install_failed.xml
+++ b/one.lfa.updater.app/src/main/res/layout/inventory_package_install_failed.xml
@@ -9,8 +9,8 @@
 
   <ImageView
     android:id="@+id/installFailedIcon"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
+    android:layout_width="32dp"
+    android:layout_height="32dp"
     android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
     app:layout_constraintStart_toStartOf="parent"
@@ -27,8 +27,9 @@
     android:ellipsize="end"
     android:maxLines="1"
     android:text="Placeholder"
-    android:textSize="14sp"
+    android:textSize="12sp"
     android:textStyle="bold"
+    android:typeface="monospace"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/installFailedIcon"
     app:layout_constraintTop_toTopOf="parent" />
@@ -38,19 +39,21 @@
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
     android:ellipsize="end"
     android:maxLines="1"
     android:text="Downloading failed"
     android:textSize="12sp"
+    android:typeface="monospace"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/installFailedIcon"
     app:layout_constraintTop_toBottomOf="@id/installFailedPackageName" />
 
   <Button
     android:id="@+id/installFailedPackageDetailsButton"
-    android:layout_width="0dp"
-    android:layout_height="40dp"
+    android:layout_width="@dimen/inventory_button_width"
+    android:layout_height="@dimen/inventory_button_height"
     android:layout_marginStart="16dp"
     android:layout_marginBottom="16dp"
     android:text="@string/package_details"
@@ -60,8 +63,8 @@
 
   <Button
     android:id="@+id/installFailedPackageButton"
-    android:layout_width="0dp"
-    android:layout_height="40dp"
+    android:layout_width="@dimen/inventory_button_width"
+    android:layout_height="@dimen/inventory_button_height"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     android:text="@string/package_retry"
