--- a/one.lfa.updater.app/src/main/res/values/styles.xml
+++ b/one.lfa.updater.app/src/main/res/values/styles.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
+  <color name="mainColorLighterLighterLighter">#c5c5d8</color>
+  <color name="mainColorLighterLighter">#a7a9ce</color>
   <color name="mainColorLighter">#7075ab</color>
   <color name="mainColorLight">#424a7c</color>
   <color name="mainColor">#14234F</color>
@@ -10,5 +12,21 @@
     <item name="colorPrimary">@color/mainColor</item>
     <item name="colorPrimaryDark">@color/mainColorDark</item>
     <item name="colorAccent">@color/mainColorLight</item>
+    <item name="android:buttonStyle">@style/LauncherButton</item>
   </style>
+
+  <style name="LauncherButton" parent="@android:style/Widget.Button">
+    <item name="android:background">@drawable/button</item>
+    <item name="android:clickable">true</item>
+    <item name="android:focusable">true</item>
+    <item name="android:gravity">center_vertical|center_horizontal</item>
+    <item name="android:shadowColor">#00000000</item>
+    <item name="android:shadowDx">0</item>
+    <item name="android:shadowDy">-1</item>
+    <item name="android:shadowRadius">0.2</item>
+    <item name="android:textColor">@drawable/button_text</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
 </resources>
