Support uninstalling packages
This adds tasks to uninstall both OPDS packages and Android
packages. This required various model/controller updates, and updates
the theme so that dialogs are correctly styled.

Affects: https://github.com/AULFA/updater/issues/12

--- a/one.lfa.updater.app/src/main/res/layout/inventory_package_install_failed.xml
+++ b/one.lfa.updater.app/src/main/res/layout/inventory_package_install_failed.xml
@@ -43,7 +43,7 @@
     android:layout_marginEnd="16dp"
     android:ellipsize="end"
     android:maxLines="1"
-    android:text="Downloading failed"
+    android:text="@string/install_operation_failed"
     android:textSize="12sp"
     android:typeface="monospace"
     app:layout_constraintEnd_toEndOf="parent"
