--- a/one.lfa.updater.app/src/main/res/layout/inventory_package_installing.xml
+++ b/one.lfa.updater.app/src/main/res/layout/inventory_package_installing.xml
@@ -19,7 +19,7 @@
     app:srcCompat="@drawable/downloading" />
 
   <TextView
-    android:id="@+id/installingPackageName"
+    android:id="@+id/operatingPackageName"
     android:layout_width="0dp"
     android:layout_height="16dp"
     android:layout_marginStart="16dp"
@@ -36,7 +36,7 @@
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
-    android:id="@+id/installingProgressState"
+    android:id="@+id/operatingProgressStatus"
     android:layout_width="0dp"
     android:layout_height="16dp"
     android:layout_marginStart="16dp"
@@ -49,7 +49,7 @@
     android:textSize="12sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/installingIcon"
-    app:layout_constraintTop_toBottomOf="@id/installingPackageName" />
+    app:layout_constraintTop_toBottomOf="@id/operatingPackageName" />
 
   <LinearLayout
     android:id="@+id/installingProgress"
@@ -64,25 +64,25 @@
     app:layout_constraintStart_toStartOf="parent">
 
     <ProgressBar
-      android:id="@+id/installingProgressMajor"
+      android:id="@+id/operatingProgressMajor"
       style="?android:attr/progressBarStyleHorizontal"
       android:layout_width="match_parent"
       android:layout_height="@dimen/inventory_progress_height"
       android:indeterminate="true"
-      app:layout_constraintEnd_toStartOf="@id/installingPackageButton"
+      app:layout_constraintEnd_toStartOf="@id/operatingButtonCancel"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/installingIcon" />
 
     <ProgressBar
-      android:id="@+id/installingProgressMinor"
+      android:id="@+id/operatingProgressMinor"
       style="?android:attr/progressBarStyleHorizontal"
       android:layout_width="match_parent"
       android:layout_height="@dimen/inventory_progress_height"
       android:indeterminate="true"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toStartOf="@id/installingPackageButton"
+      app:layout_constraintEnd_toStartOf="@id/operatingButtonCancel"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/installingProgressMajor" />
+      app:layout_constraintTop_toBottomOf="@id/operatingProgressMajor" />
   </LinearLayout>
 
   <LinearLayout
@@ -99,7 +99,7 @@
     app:layout_constraintStart_toStartOf="parent">
 
     <Button
-      android:id="@+id/installingPackageButton"
+      android:id="@+id/operatingButtonCancel"
       android:layout_width="@dimen/inventory_button_width"
       android:layout_height="match_parent"
       android:text="@string/package_cancel"
