Add a boot screen
This adds a more principled boot screen and uses a service
configuration similar to the SimplyE app. This allows for more work
to be done in the app on startup without resulting in a long blank
screen on startup. It also adjusts how bundled repositories are
instantiated to ensure easy upgrades.

--- a/one.lfa.updater.app/src/main/res/xml/bundled_repositories.xml
+++ b/one.lfa.updater.app/src/main/res/xml/bundled_repositories.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<bundled-repositories>
-  <bundled-repository
+<BundledRepositories>
+  <BundledRepository
     source="https://distribution.lfa.one/repository/testing/all/releases.xml"
+    updated="2019-12-19T12:50:20"
     title="LFA Testing (All)"
     uuid="96ed018a-1531-4a97-bfdb-acccc54ff4f3" />
-  <bundled-repository
+  <BundledRepository
     source="http://hotspot.lfa.one:8080/apk/releases.xml"
+    updated="2019-12-19T12:50:20"
     title="LFA Hotspot Mirror"
     uuid="f2e20610-63c1-46ce-95aa-606a7c9e2391" />
-</bundled-repositories>
+</BundledRepositories>
