--- a/one.lfa.updater.app/src/main/res/layout/boot.xml
+++ b/one.lfa.updater.app/src/main/res/layout/boot.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
   <ImageView
     android:id="@+id/logo"
-    android:layout_width="128dp"
-    android:layout_height="128dp"
+    android:layout_width="176dp"
+    android:layout_height="176dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="32dp"
     app:layout_constraintBottom_toTopOf="@+id/bootProgress"
-    app:layout_constraintEnd_toEndOf="@+id/bootProgress"
-    app:layout_constraintStart_toStartOf="@+id/bootProgress"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     app:srcCompat="@drawable/logo" />
 
   <ProgressBar
@@ -22,14 +22,14 @@
     style="?android:attr/progressBarStyleHorizontal"
     android:layout_width="0dp"
     android:layout_height="32dp"
-    android:layout_marginStart="96dp"
+    android:layout_marginStart="16dp"
     android:layout_marginTop="16dp"
-    android:layout_marginEnd="96dp"
+    android:layout_marginEnd="16dp"
     android:layout_marginBottom="16dp"
     android:indeterminate="true"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="@+id/logo"
+    app:layout_constraintStart_toStartOf="@+id/logo"
     app:layout_constraintTop_toTopOf="parent" />
 
   <TextView
@@ -40,6 +40,7 @@
     android:gravity="center"
     android:text="@string/bootInProgress"
     android:textAlignment="center"
+    android:visibility="invisible"
     app:layout_constraintEnd_toEndOf="@+id/bootProgress"
     app:layout_constraintStart_toStartOf="@+id/bootProgress"
     app:layout_constraintTop_toBottomOf="@+id/bootProgress" />
