--- a/one.lfa.updater.app/src/main/res/xml/net_security_policy.xml
+++ b/one.lfa.updater.app/src/main/res/xml/net_security_policy.xml
@@ -3,5 +3,6 @@
 <network-security-config>
   <domain-config cleartextTrafficPermitted="true">
     <domain includeSubdomains="true">lfa.one</domain>
+    <domain includeSubdomains="true">router.asus.com</domain>
   </domain-config>
 </network-security-config>
