--- a/one.lfa.updater.app/src/main/res/xml/bundled_repositories.xml
+++ b/one.lfa.updater.app/src/main/res/xml/bundled_repositories.xml
@@ -7,10 +7,10 @@
     title="LFA Hotspot"
     uuid="f2e20610-63c1-46ce-95aa-606a7c9e2391" />
   <BundledRepository
-    source="https://distribution.lfa.one/repository/testing/all/releases.xml"
+    source="https://distribution.lfa.one/repository/testing/releases.xml"
     updated="2020-06-04T09:40:00"
-    title="LFA Testing (All)"
-    uuid="96ed018a-1531-4a97-bfdb-acccc54ff4f3" />
+    title="LFA Testing"
+    uuid="0e3ec0c6-65ba-477b-be11-8e59f99955bb" />
   <BundledRepository
       source="lfaUpdaterExternal:/releases.xml"
       updated="2020-09-11T09:40:00"
